<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConversorActivity">

    <Button
        android:id="@+id/btBack"
        android:text="@string/back"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conversor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <RadioButton
                android:id="@+id/radioEuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_euro" />

            <RadioButton
                android:id="@+id/radioDolar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_dolar"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <EditText
            android:id="@+id/inputValue"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"/>
        <ImageView
            android:id="@+id/imgInputValue"
            android:layout_width="100dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:src="@drawable/usa"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >
        <Button
            android:id="@+id/btnConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            app:cornerRadius="0dp"
            android:text="@string/bt_txtconverter"
            android:backgroundTint="@color/light_gray"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/resultValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0,00" />
        <TextView
            android:id="@+id/unitValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/unit_euro"
            />
        <ImageView
            android:id="@+id/imgResultValue"
            android:layout_width="100dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:src="@drawable/eu"/>

    </LinearLayout>


</LinearLayout>